package com.netcracker.cloud.dbaas.enums;

public enum BackupTaskStatus {
    NOT_STARTED, IN_PROGRESS, FAILED, FAILED_WITH_RETRY, COMPLETED
}
